--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">Shopping List</string>
     <string name="add_shop_item_content_description">Add new shop item</string>
-    <string name="name_hint">Name:</string>
-    <string name="count_hint">Count:</string>
-    <string name="save_btn">Save</string>
-    <string name="error_input_name">Invalid name</string>
-    <string name="error_input_count">Invalid count</string>
+    <string name="name_hint">Товар:</string>
+    <string name="count_hint">Количество:</string>
+    <string name="save_btn">Сохранить</string>
+    <string name="error_input_name">Недопустимое имя</string>
+    <string name="error_input_count">Недопустимое значение</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="write_your_purchases">WRITE YOUR PURCHASES</string>
 </resources>
