--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="error_input_count">Недопустимое значение</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="write_your_purchases">WRITE YOUR PURCHASES</string>
+    <string name="write_your_purchases">Запиши свои покупки</string>
+    <string name="title_text">Ваши покупки:</string>
 </resources>
